# pnytter

./: .gitignore  LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  test.env
.github/workflows/: release.yaml  test.yaml
pnytter/: __init__.py  exceptions.py  nitter_parser.py  pnytter.py  utils.py
pnytter/models/: __init__.py  base.py  generic.py  profiles.py  tweets.py
pnytter/nitter_parser/: __init__.py  base.py  profiles.py  tweets.py
tests/: _test_pnytter_tweets_data.py  conftest.py  test_pnytter_api.py  test_pnytter_profiles.py  test_pnytter_tweets.py
