[tool.poetry]
name = "pnytter"
version = "0.1.1"
description = "A Python library for scraping Twitter using Nitter"
authors = ["David Lorenzo <17401854+david-lor@users.noreply.github.com>"]
keywords = [
    "scraping",
    "scraper",
    "twitter",
    "nitter",
]
readme = "README.md"
license = "ISC"
homepage = "https://github.com/David-Lor/pnytter"
repository = "https://github.com/David-Lor/pnytter"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7,<4.0"
pydantic = "1.9.1"
requests = "2.28.1"
beautifulsoup4 = "4.11.1"
urljoin = "1.0.0"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "7.1.2"
python-dotenv = "0.20.0"
lxml = "4.9.1"

[build-system]
requires = ["poetry==1.2.0b2"]
build-backend = "poetry.masonry.api"
